--- a/blog/app/views/posts/index.html.erb
+++ b/blog/app/views/posts/index.html.erb
@@ -4,15 +4,17 @@
 <table>
   <tr>
     <th>Title</th>
-    <th colspan="3"></th>
     <th>Author</th>
   </tr>
+
   <% @posts.each do |post| %>
+
     <tr>
       <td><%= post.postTitle %></td>
       <td><%= post.postAuthor %></td>
-      <td><%= link_to 'Show', post_path(post) %></td>
+      <td><%= link_to 'Show', post_path(post) %> | </td>
       <td><%= link_to 'Delete', post_path(post), method: :delete %></td>
     </tr>
+    
   <% end %>
 </table>
